Fix h3 on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,211 +54,211 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(55px, 9999px, 27px, 0);
-    transform: skew(0.93deg);
+    clip: rect(81px, 9999px, 96px, 0);
+    transform: skew(0.87deg);
   }
   5% {
-    clip: rect(62px, 9999px, 86px, 0);
-    transform: skew(0.82deg);
+    clip: rect(20px, 9999px, 90px, 0);
+    transform: skew(0.13deg);
   }
   10% {
-    clip: rect(96px, 9999px, 62px, 0);
-    transform: skew(0.23deg);
+    clip: rect(71px, 9999px, 89px, 0);
+    transform: skew(0.64deg);
   }
   15% {
-    clip: rect(57px, 9999px, 88px, 0);
-    transform: skew(0.61deg);
+    clip: rect(48px, 9999px, 27px, 0);
+    transform: skew(0.38deg);
   }
   20% {
-    clip: rect(63px, 9999px, 88px, 0);
-    transform: skew(0.39deg);
+    clip: rect(42px, 9999px, 77px, 0);
+    transform: skew(0.47deg);
   }
   25% {
-    clip: rect(39px, 9999px, 12px, 0);
-    transform: skew(0.99deg);
+    clip: rect(38px, 9999px, 51px, 0);
+    transform: skew(0.88deg);
   }
   30% {
-    clip: rect(69px, 9999px, 21px, 0);
-    transform: skew(0.31deg);
+    clip: rect(4px, 9999px, 93px, 0);
+    transform: skew(0.88deg);
   }
   35% {
-    clip: rect(84px, 9999px, 100px, 0);
-    transform: skew(0.14deg);
+    clip: rect(10px, 9999px, 74px, 0);
+    transform: skew(0.88deg);
   }
   40% {
-    clip: rect(32px, 9999px, 67px, 0);
-    transform: skew(0.05deg);
+    clip: rect(38px, 9999px, 96px, 0);
+    transform: skew(0.8deg);
   }
   45% {
-    clip: rect(86px, 9999px, 44px, 0);
-    transform: skew(0.75deg);
+    clip: rect(69px, 9999px, 91px, 0);
+    transform: skew(0.59deg);
   }
   50% {
-    clip: rect(17px, 9999px, 90px, 0);
-    transform: skew(0.92deg);
+    clip: rect(77px, 9999px, 90px, 0);
+    transform: skew(0.39deg);
   }
   55% {
-    clip: rect(7px, 9999px, 23px, 0);
-    transform: skew(0.99deg);
+    clip: rect(38px, 9999px, 70px, 0);
+    transform: skew(0.78deg);
   }
   60% {
-    clip: rect(9px, 9999px, 38px, 0);
-    transform: skew(0.07deg);
+    clip: rect(21px, 9999px, 75px, 0);
+    transform: skew(0.69deg);
   }
   65% {
-    clip: rect(75px, 9999px, 51px, 0);
-    transform: skew(0.75deg);
+    clip: rect(54px, 9999px, 26px, 0);
+    transform: skew(0.02deg);
   }
   70% {
-    clip: rect(52px, 9999px, 59px, 0);
-    transform: skew(0.51deg);
+    clip: rect(88px, 9999px, 51px, 0);
+    transform: skew(0.38deg);
   }
   75% {
-    clip: rect(21px, 9999px, 57px, 0);
-    transform: skew(0.94deg);
+    clip: rect(50px, 9999px, 61px, 0);
+    transform: skew(0.21deg);
   }
   80% {
-    clip: rect(36px, 9999px, 77px, 0);
-    transform: skew(0.12deg);
+    clip: rect(99px, 9999px, 75px, 0);
+    transform: skew(0.3deg);
   }
   85% {
-    clip: rect(73px, 9999px, 4px, 0);
-    transform: skew(0.32deg);
+    clip: rect(10px, 9999px, 4px, 0);
+    transform: skew(0.92deg);
   }
   90% {
-    clip: rect(96px, 9999px, 67px, 0);
-    transform: skew(0.15deg);
+    clip: rect(43px, 9999px, 5px, 0);
+    transform: skew(0.92deg);
   }
   95% {
-    clip: rect(19px, 9999px, 75px, 0);
-    transform: skew(0.97deg);
+    clip: rect(46px, 9999px, 27px, 0);
+    transform: skew(0.85deg);
   }
   100% {
-    clip: rect(74px, 9999px, 53px, 0);
-    transform: skew(0.8deg);
+    clip: rect(75px, 9999px, 63px, 0);
+    transform: skew(0.6deg);
   }
 }
 /* // Same deal, just duplicated for ultra randomness. */
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(36px, 9999px, 49px, 0);
-    transform: skew(0.43deg);
+    clip: rect(67px, 9999px, 39px, 0);
+    transform: skew(0.88deg);
   }
   5% {
-    clip: rect(10px, 9999px, 95px, 0);
-    transform: skew(0.01deg);
+    clip: rect(10px, 9999px, 12px, 0);
+    transform: skew(0.18deg);
   }
   10% {
-    clip: rect(2px, 9999px, 36px, 0);
-    transform: skew(0.82deg);
+    clip: rect(57px, 9999px, 28px, 0);
+    transform: skew(0.46deg);
   }
   15% {
-    clip: rect(45px, 9999px, 42px, 0);
-    transform: skew(0.5deg);
+    clip: rect(96px, 9999px, 86px, 0);
+    transform: skew(0.58deg);
   }
   20% {
-    clip: rect(13px, 9999px, 98px, 0);
-    transform: skew(0.1deg);
+    clip: rect(21px, 9999px, 16px, 0);
+    transform: skew(0.88deg);
   }
   25% {
-    clip: rect(97px, 9999px, 62px, 0);
-    transform: skew(0.7deg);
+    clip: rect(9px, 9999px, 60px, 0);
+    transform: skew(0.42deg);
   }
   30% {
-    clip: rect(51px, 9999px, 23px, 0);
-    transform: skew(0.83deg);
+    clip: rect(15px, 9999px, 55px, 0);
+    transform: skew(0.49deg);
   }
   35% {
-    clip: rect(46px, 9999px, 66px, 0);
-    transform: skew(0.72deg);
+    clip: rect(95px, 9999px, 30px, 0);
+    transform: skew(0.04deg);
   }
   40% {
-    clip: rect(94px, 9999px, 60px, 0);
-    transform: skew(0.89deg);
+    clip: rect(97px, 9999px, 2px, 0);
+    transform: skew(0.12deg);
   }
   45% {
-    clip: rect(74px, 9999px, 63px, 0);
-    transform: skew(0.43deg);
+    clip: rect(50px, 9999px, 55px, 0);
+    transform: skew(0.54deg);
   }
   50% {
-    clip: rect(15px, 9999px, 25px, 0);
-    transform: skew(0.81deg);
+    clip: rect(5px, 9999px, 100px, 0);
+    transform: skew(0.61deg);
   }
   55% {
-    clip: rect(69px, 9999px, 54px, 0);
-    transform: skew(0.23deg);
+    clip: rect(68px, 9999px, 75px, 0);
+    transform: skew(0.32deg);
   }
   60% {
-    clip: rect(73px, 9999px, 85px, 0);
-    transform: skew(0.79deg);
+    clip: rect(44px, 9999px, 32px, 0);
+    transform: skew(0.4deg);
   }
   65% {
-    clip: rect(20px, 9999px, 82px, 0);
-    transform: skew(0.11deg);
+    clip: rect(4px, 9999px, 55px, 0);
+    transform: skew(0.97deg);
   }
   70% {
-    clip: rect(4px, 9999px, 33px, 0);
-    transform: skew(0.93deg);
+    clip: rect(20px, 9999px, 62px, 0);
+    transform: skew(0.87deg);
   }
   75% {
-    clip: rect(67px, 9999px, 31px, 0);
-    transform: skew(0.36deg);
+    clip: rect(14px, 9999px, 70px, 0);
+    transform: skew(0.91deg);
   }
   80% {
-    clip: rect(61px, 9999px, 90px, 0);
-    transform: skew(0.93deg);
+    clip: rect(99px, 9999px, 2px, 0);
+    transform: skew(0.75deg);
   }
   85% {
-    clip: rect(80px, 9999px, 14px, 0);
-    transform: skew(0.31deg);
+    clip: rect(100px, 9999px, 63px, 0);
+    transform: skew(0.78deg);
   }
   90% {
-    clip: rect(7px, 9999px, 56px, 0);
-    transform: skew(0.96deg);
+    clip: rect(46px, 9999px, 40px, 0);
+    transform: skew(0.13deg);
   }
   95% {
-    clip: rect(80px, 9999px, 25px, 0);
-    transform: skew(0.68deg);
+    clip: rect(6px, 9999px, 32px, 0);
+    transform: skew(0.52deg);
   }
   100% {
-    clip: rect(84px, 9999px, 37px, 0);
-    transform: skew(0.16deg);
+    clip: rect(35px, 9999px, 100px, 0);
+    transform: skew(0.39deg);
   }
 }
 /* // Does the same deal as before, but now only skews. Used for main text. */
 @keyframes glitch-skew {
   0% {
-    transform: skew(-3deg);
-  }
-  10% {
-    transform: skew(-2deg);
-  }
-  20% {
-    transform: skew(-2deg);
-  }
-  30% {
-    transform: skew(-3deg);
-  }
-  40% {
-    transform: skew(4deg);
-  }
-  50% {
-    transform: skew(-4deg);
-  }
-  60% {
     transform: skew(1deg);
   }
-  70% {
+  10% {
+    transform: skew(2deg);
+  }
+  20% {
+    transform: skew(0deg);
+  }
+  30% {
+    transform: skew(-1deg);
+  }
+  40% {
+    transform: skew(2deg);
+  }
+  50% {
     transform: skew(4deg);
+  }
+  60% {
+    transform: skew(-1deg);
+  }
+  70% {
+    transform: skew(-4deg);
   }
   80% {
     transform: skew(-2deg);
   }
   90% {
-    transform: skew(2deg);
+    transform: skew(-1deg);
   }
   100% {
-    transform: skew(1deg);
+    transform: skew(3deg);
   }
 }
 /* Smartphones (portrait and landscape) ———– */
@@ -286,7 +286,7 @@ skew to change the 'thickness' of the glitch.*/
   }
 
   h3 {
-    font-size: 2.2em;
+    font-size: 2.2em !important;
   }
 
   .section-title {
