--- a/src/scss/smartphonePL.scss
+++ b/src/scss/smartphonePL.scss
@@ -26,7 +26,7 @@ and (max-width : 480px) {
  }
 
  h3 {
-     font-size: 2.2em;
+     font-size: 2.2em !important;
  }
 
  .section-title {
